--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -215,9 +215,11 @@ Figure~\vref{figure:ExampleAtomicFlows} has three examples of derivations and th
 \end{figure}
 %-----------
 
+\Tom{`atom' -> `atom occurrences'}
+
 %--------------------------------------------------
 \begin{definition}\label{definiton:FlowRestriction}
-Given a derivation $\Phi$ with flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$}\index{flow!restriction to atom} is the largest subflow $\psi$ of $\phi$, such that every edge of $\psi$ is mapped to from $a$ or $\bar a$.
+Given a derivation $\Phi$ with flow $\phi$, and an atom $a$, the \emph{restriction of $\phi$ to $a$}\index{flow!restriction to atom} is the largest subflow $\psi$ of $\phi$, such that every edge of $\psi$ is mapped to from occurrences of $a$ or $\bar a$.
 \end{definition}
 %---------------
 
