Only talk about constructive soundness proofs of global reductions, to be on the safe side

--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -39,9 +39,11 @@ A reduction $\mathrel{R}$ is \emph{sound}\index{reduction!sound} if, for every $
 \end{definition}
 %---------------
 
+\Tom{Avoid talking about constructive soundness proofs for local reductions, as this convention is not used in that case.}
+
 %-----------------
 \begin{convention}
-We provide constructive soundness proofs for every reduction in this thesis, so from now on, for any reduction $\mathrel{R}$, when we write $\Phi\mathrel{R}\Psi$, we mean that $\Psi$ is the derivation obtained form $\Phi$ in the soundness proof of $\mathrel{R}$.
+We provide constructive soundness proofs for every reduction in this chapter, so from now on, for any reduction $\mathrel{R}$ and derivation $\Phi$, when we write $\Phi\mathrel{R}\Psi$, we mean that $\Psi$ is the derivation obtained form $\Phi$ in the soundness proof of $\mathrel{R}$.
 \end{convention}
 %---------------
 
