--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -5,14 +5,14 @@
 
 We now define the mapping from derivations to flows. As we said, the idea is that structural rule instances map to the respective atomic-flow vertices, and the edges trace the atom occurrences between rule instances.
 
-\Tom{Changed from proposition to a definition and a propositions:}
+\Tom{Changed from proposition to a definition and a proposition:}
 
 \begin{definition}\label{definition:AssociatedFlow}
 Given a derivation\/ $\Phi$, we define the flow $\phi$ \emph{associated with}\index{flow!associated with derivation} $\Phi$:
 \begin{itemize}
   \item if $\Phi$ is a unit, then $\phi$ is the empty flow;
   \item if $\Phi$ is an atom, then $\phi$ is a flow containing only the edge $\epsilon$ and no vertices; we say that \emph{$\Phi$ is mapped to $\epsilon$};
-  \item if $\Phi=\vls[\Psi_1.\Psi_2]$ or $\Phi=\vls(\Psi_1.\Psi_2)$, where $\psi_1$ (resp., $\psi_2$) is the flow associated with $\Psi_1$ (resp., $\Psi_2$), then $\phi$ is the disjoint union of $\psi_1$ and $\psi_2$; and
+  \item if $\Phi=\vls[\Psi_1.\Psi_2]$ or $\Phi=\vls(\Psi_1.\Psi_2)$, and $\psi_1$ and $\psi_2$ are the flow associated with $\Psi_1$ and $\Psi_2$, respectively, then $\phi$ is the disjoint union of $\psi_1$ and $\psi_2$; and
   \item if
 \[
 \Phi\;=\;
@@ -42,7 +42,7 @@ Given a derivation\/ $\Phi$, we define the flow $\phi$ \emph{associated with}\in
   }
 }\quad,
 \]
-where $\psi_1$ (resp., $\psi_2$) is the flow associated with $\Psi_1$ (resp., $\Psi_2$), then $\phi$ is the disjoint union of $\phi_1$ and $\phi_2$, where
+where $\psi_1$ (resp., $\psi_2$) is the flow associated with $\Psi_1$ (resp., $\Psi_2$), then $\phi$ is obtained by modifying the disjoint union of $\phi_1$ and $\phi_2$ in the following way:
 \begin{itemize}
 \item if $\rho$ is a structural inference rule, $\phi$ also contains a new vertex $\nu$ that is labelled with the name of $\rho$. Furthermore, the lower (resp., upper) map of $\phi$ maps each of the lower (resp., upper) edges of $\phi_1$ (resp., $\phi_2$) to $\nu$; we say that \emph{$\rho$ is mapped to $\nu$}, and
 \item if $\rho$ is a linear inference rule, then the lower edges of $\phi_1$ are pairwise identified with the upper edges of $\phi_2$ in such a way that an atom occurrence in the premiss of $\rho$ is mapped to the same edge as the corresponding atom occurrence in the conclusion of $\rho$.
@@ -58,7 +58,7 @@ Given a derivation $\Phi$ with the associated flow $\phi$, the flow $\psi$ is as
 \end{proposition}
 
 \begin{proof}
-We sketch the proof, which follows by strucural induction on $\Phi$:
+We sketch the proof, which follows by structural induction on $\Phi$:
 \begin{itemize}
   \item If $\phi$ and $\psi$ are isomorphic, then $\psi$ is associated with $\Phi$, because for any partitioning of $\phi$ into subflows, there is a partitioning of $\psi$ into subflows so that the subflows of $\phi$ are pairwise isomorphic to the subflows of $\psi$.
   \item If $\psi$ is associtaed with $\Phi$, then $\phi$ and $\psi$ are isomorphic, because if $\phi_1$ (resp., $\phi_2$) and $\psi_1$ (resp., $\psi_2$) are isomorphic, then the disjoint union of $\phi_1$ and $\phi_2$ is isomorphic to the disjoint union of $\psi_1$ and $\psi_2$.
@@ -234,7 +234,7 @@ Consider the rightmost derivation and its associated flow in Figure~\vref{figure
 
 \Tom{Gave the motivation for the following theorem.}
 
-We now show that the definition of atomic flows is `minimal', in the sense that, if we restrict the definition, we can no longer construct a flow associated with every derivation. We do this by showing that every flow is associated with some derivation.
+We now show that the definition of atomic flows is `minimal', in the sense that every flow is associated with some derivation.
 
 \Tom{Added more explanation:}
 
